# pyFTLE

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  PR_DESCRIPTION.md  README.md  build_cython.sh  config.yaml  create_list_of_input_files.py  double_gyre.py  pyproject.toml  pyrightconfig.json  pytest.ini  tox.ini  typos.toml
.github/workflows/: code-quality.yaml  code-style.yaml  publish.yaml  tests.yaml
examples/: 01_Closed-form_velocity.ipynb  01_Closed-form_velocity_helical.ipynb  double_gyre.ipynb
joss-paper/: paper.bib  paper.md
scripts/: generate_stubs.py
src/: api.py  app.py  cauchy_green.py  data_source.py  dtos.py  file_readers.py  file_utils.py  file_writers.py  ftle.py  ftle_solver.py  hyperparameters.py  integrate.py  interpolate.py  main.py  my_types.py  parallel.py  particles.py  process.py  setup.py
src/cython_integrators/: __init__.py  integrators.pxd  integrators.pyx
src/interp3d/: __init__.py  interp.pxd  interp.pyx  interp_3d.py
src/pyftle/: cauchy_green.py  data_source.py  decorators.py  file_readers.py  file_utils.py  file_writers.py  ftle.py  ftle_solver.py  ginterp.pyi  hyperparameters.py  integrate.py  interpolate.py  my_types.py  parallel.py  particles.py
src/pyftle/grid_interp/: GridInterp.cpp  ginterp.py  grid_interp.py
tests/: conftest.py  test_file_readers.py  test_file_utils.py  test_file_writers.py  test_ftle.py  test_grid_interp.py  test_integrate.py  test_interpolate.py  test_neighboring_particles.py
