[project]
name = "pyFTLE"
version = "0.2.0"
description = "Python package to compute Finite Time Lyapunov Exponents (FTLE)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "configargparse>=1.7",
    "matplotlib>=3.10.0",
    "nptyping>=2.5.0",
    "numba>=0.61.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyevtk>=1.6.0",
    "pyvista>=0.46.3",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.9",
    "scipy-stubs>=1.15.2.0",
    "pandas-stubs>=2.2.3.241126",
    "types-tqdm>=4.67.0.20241221",
    "pyright>=1.1.395",
    "typos>=1.29.10",
    "pybind11",
    "cmake",
    "ninja",
    "pybind11-stubgen>=2.5.5",
]
test = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build"
wheel.packages = ["src/pyftle"]
sdist.include = ["src/pyftle/grid_interp/GridInterp.cpp", "CMakeLists.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[project.scripts]
generate-stubs = "scripts.generate_stubs:main"
